# course_work_6

./: pyproject.toml  requirements.txt
skymarket/ads/: models.py  serializers.py  urls.py  views.py
skymarket/fixtures/: ad.json  comments.json  users.json
skymarket/skymarket/: settings.py
skymarket/users/: managers.py  models.py  serializers.py  urls.py
